# op8d_lexemizer

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: lexemize-rs2018-arg.rs  lexemize-rs2018-file.rs
src/: lib.rs
src/rust_2018/: lexeme.rs  lexemize.rs  mod.rs
src/rust_2018/detect/: character.rs  comment.rs  identifier.rs  mod.rs  number.rs  punctuation.rs  string.rs  whitespace.rs
