[package]
name = "op8d_lexemizer"
version = "0.1.0"
authors = ["Opinionated <info@op8d.com>"]
edition = "2018"
description = "Opinionated library for transforming code to a vector of Lexemes"
readme = "README.md"
repository = "https://github.com/op8d/op8d_lexemizer"
license = "MIT"
homepage = "https://play.op8d.com/lexemizer/"
keywords = ["op8d", "code", "lexer", "highlighter"]
categories = ["compilers"]
